--- a/ASM/.atari800.cfg
+++ b/ASM/.atari800.cfg
@@ -5,7 +5,7 @@ ROM_OS_B_NTSC=
 ROM_OS_AA00R10=
 ROM_OS_AA00R11=
 ROM_OS_BB00R1=
-ROM_OS_BB01R2=C:\Users\bvenn\Documents\Atari\atari800-5.2.0-win32-sdl\ATARIXL.ROM
+ROM_OS_BB01R2=C:\Users\B.Venneker\Desktop\atari800-5.2.0-win32-sdl\ATARIXL.ROM
 ROM_OS_BB02R3=
 ROM_OS_BB02R3V4=
 ROM_OS_CC01R4=
@@ -17,9 +17,9 @@ ROM_5200=
 ROM_5200_A=
 ROM_BASIC_A=
 ROM_BASIC_B=
-ROM_BASIC_C=C:\Users\bvenn\Documents\Atari\atari800-5.2.0-win32-sdl\ATARIBAS.ROM
+ROM_BASIC_C=C:\Users\B.Venneker\Desktop\atari800-5.2.0-win32-sdl\ATARIBAS.ROM
 ROM_XEGAME=
-ROM_400/800_CUSTOM=C:\Users\bvenn\Documents\Atari\atari800-5.2.0-win32-sdl\ATARIOSB.ROM
+ROM_400/800_CUSTOM=C:\Users\B.Venneker\Desktop\atari800-5.2.0-win32-sdl\ATARIOSB.ROM
 ROM_XL/XE_CUSTOM=
 ROM_5200_CUSTOM=
 ROM_BASIC_CUSTOM=
