--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 ESP32/800XL_Chat_3_77/.theia/launch.json
 /ESP32/800XL_Chat_3_77/build
 /KiCAD/Cartridge_800xl_4/Cartridge_800xl_2-backups
+/ESP32/800XL_Chat_3/build
