--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ ESP32/800XL_Chat_3_77/.theia/launch.json
 /ESP32/800XL_Chat_3_77/build
 /KiCAD/Cartridge_800xl_4/Cartridge_800xl_2-backups
 /ESP32/800XL_Chat_3/build
+ASM/new.asm
+ASM/comment.py
